# twisted

./: .gitignore  main.py  pyproject.toml  startprod.sh  updateprod.sh
common/: admin.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_kvpairs.py  0003_rename_kvpairs_kvpair.py  0004_kvpair_note.py
common/templates/: base.html  faq.html  homepage.html
mysite/: settings.py  urls.py
tailwindcsstheme/: apps.py
tailwindcsstheme/static_src/: package-lock.json  package.json
tailwindcsstheme/static_src/src/: styles.css
