[project]
name = "twisted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-markdownify>=0.9.6",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
]
